ads-b/app-backend/ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ads-b-service
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app.kubernetes.io/name: ads-b-service
  type: ClusterIP
