ads-b/app-backend/ws-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ads-b-service
spec:
  to:
    kind: Service
    name: ads-b-service
  port:
    targetPort: 8080
  wildcardPolicy: None
